--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-transformer": "^3.1.2",
     "strapi-provider-upload-supabase": "^1.0.0",
     "styled-components": "5.3.3"
   },
